sys/prebuilt-bindings/geos_3.11.rs

extern "C" {
    #[doc = " \\see GEOSContains"]
    pub fn GEOSContains_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSOverlaps"]
    pub fn GEOSOverlaps_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSEquals"]
    pub fn GEOSEquals_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSEqualsExact"]
    pub fn GEOSEqualsExact_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        tolerance: f64,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSCovers"]
    pub fn GEOSCovers_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSCoveredBy"]
    pub fn GEOSCoveredBy_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSPrepare"]
    pub fn GEOSPrepare_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *const GEOSPreparedGeometry;
}
extern "C" {
    #[doc = " \\see GEOSPreparedGeom_destroy"]
    pub fn GEOSPreparedGeom_destroy_r(handle: GEOSContextHandle_t, g: *const GEOSPreparedGeometry);
}
extern "C" {
    #[doc = " \\see GEOSPreparedContains"]
    pub fn GEOSPreparedContains_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSPreparedContainsProperly"]
    pub fn GEOSPreparedContainsProperly_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSPreparedCoveredBy"]
    pub fn GEOSPreparedCoveredBy_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSPreparedCovers"]
    pub fn GEOSPreparedCovers_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSPreparedCrosses"]
    pub fn GEOSPreparedCrosses_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSPreparedDisjoint"]
    pub fn GEOSPreparedDisjoint_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSPreparedIntersects"]
    pub fn GEOSPreparedIntersects_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSPreparedOverlaps"]
    pub fn GEOSPreparedOverlaps_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSPreparedTouches"]
    pub fn GEOSPreparedTouches_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSPreparedWithin"]
    pub fn GEOSPreparedWithin_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSPreparedNearestPoints"]
    pub fn GEOSPreparedNearestPoints_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    #[doc = " \\see GEOSPreparedDistance"]
    pub fn GEOSPreparedDistance_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSPreparedDistanceWithin"]
    pub fn GEOSPreparedDistanceWithin_r(
        handle: GEOSContextHandle_t,
        pg1: *const GEOSPreparedGeometry,
        g2: *const GEOSGeometry,
        dist: f64,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSSTRtree_create"]
    pub fn GEOSSTRtree_create_r(
        handle: GEOSContextHandle_t,
        nodeCapacity: usize,
    ) -> *mut GEOSSTRtree;
}
extern "C" {
    #[doc = " \\see GEOSSTRtree_insert"]
    pub fn GEOSSTRtree_insert_r(
        handle: GEOSContextHandle_t,
        tree: *mut GEOSSTRtree,
        g: *const GEOSGeometry,
        item: *mut libc::c_void,
    );
}
extern "C" {
    #[doc = " \\see GEOSSTRtree_query"]
    pub fn GEOSSTRtree_query_r(
        handle: GEOSContextHandle_t,
        tree: *mut GEOSSTRtree,
        g: *const GEOSGeometry,
        callback: GEOSQueryCallback,
        userdata: *mut libc::c_void,
    );
}
extern "C" {
    #[doc = " \\see GEOSSTRtree_nearest"]
    pub fn GEOSSTRtree_nearest_r(
        handle: GEOSContextHandle_t,
        tree: *mut GEOSSTRtree,
        geom: *const GEOSGeometry,
    ) -> *const GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSSTRtree_nearest_generic"]
    pub fn GEOSSTRtree_nearest_generic_r(
        handle: GEOSContextHandle_t,
        tree: *mut GEOSSTRtree,
        item: *const libc::c_void,
        itemEnvelope: *const GEOSGeometry,
        distancefn: GEOSDistanceCallback,
        userdata: *mut libc::c_void,
    ) -> *const libc::c_void;
}
extern "C" {
    #[doc = " \\see GEOSSTRtree_iterate"]
    pub fn GEOSSTRtree_iterate_r(
        handle: GEOSContextHandle_t,
        tree: *mut GEOSSTRtree,
        callback: GEOSQueryCallback,
        userdata: *mut libc::c_void,
    );
}
extern "C" {
    #[doc = " \\see GEOSSTRtree_remove"]
    pub fn GEOSSTRtree_remove_r(
        handle: GEOSContextHandle_t,
        tree: *mut GEOSSTRtree,
        g: *const GEOSGeometry,
        item: *mut libc::c_void,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSSTRtree_destroy"]
    pub fn GEOSSTRtree_destroy_r(handle: GEOSContextHandle_t, tree: *mut GEOSSTRtree);
}
extern "C" {
    #[doc = " \\see GEOSisEmpty"]
    pub fn GEOSisEmpty_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSisSimple"]
    pub fn GEOSisSimple_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSisRing"]
    pub fn GEOSisRing_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSHasZ"]
    pub fn GEOSHasZ_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSisClosed"]
    pub fn GEOSisClosed_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> libc::c_char;
}
#[doc = " See geos::algorithm::BoundaryNodeRule::getBoundaryRuleMod2()"]
pub const GEOSRelateBoundaryNodeRules_GEOSRELATE_BNR_MOD2: GEOSRelateBoundaryNodeRules = 1;
#[doc = " Same as \\ref GEOSRELATE_BNR_MOD2"]
pub const GEOSRelateBoundaryNodeRules_GEOSRELATE_BNR_OGC: GEOSRelateBoundaryNodeRules = 1;
#[doc = " See geos::algorithm::BoundaryNodeRule::getBoundaryEndPoint()"]
pub const GEOSRelateBoundaryNodeRules_GEOSRELATE_BNR_ENDPOINT: GEOSRelateBoundaryNodeRules = 2;
#[doc = " See geos::algorithm::BoundaryNodeRule::getBoundaryMultivalentEndPoint()"]
pub const GEOSRelateBoundaryNodeRules_GEOSRELATE_BNR_MULTIVALENT_ENDPOINT:
    GEOSRelateBoundaryNodeRules = 3;
#[doc = " See geos::algorithm::BoundaryNodeRule::getBoundaryMonovalentEndPoint()"]
pub const GEOSRelateBoundaryNodeRules_GEOSRELATE_BNR_MONOVALENT_ENDPOINT:
    GEOSRelateBoundaryNodeRules = 4;
#[doc = " Controls the behavior of the result of GEOSRelate when returning"]
#[doc = " DE9IM results for two geometries."]
pub type GEOSRelateBoundaryNodeRules = libc::c_uint;
extern "C" {
    #[doc = " \\see GEOSRelatePattern"]
    pub fn GEOSRelatePattern_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        pat: *const libc::c_char,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSRelate"]
    pub fn GEOSRelate_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSRelatePatternMatch"]
    pub fn GEOSRelatePatternMatch_r(
        handle: GEOSContextHandle_t,
        mat: *const libc::c_char,
        pat: *const libc::c_char,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSRelateBoundaryNodeRule"]
    pub fn GEOSRelateBoundaryNodeRule_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        bnr: libc::c_int,
    ) -> *mut libc::c_char;
}
#[doc = " Allow self-touching rings to form a hole in a polygon."]
pub const GEOSValidFlags_GEOSVALID_ALLOW_SELFTOUCHING_RING_FORMING_HOLE: GEOSValidFlags = 1;
#[doc = " Change behaviour of validity testing in \\ref GEOSisValidDetail"]
pub type GEOSValidFlags = libc::c_uint;
extern "C" {
    #[doc = " \\see GEOSisValid"]
    pub fn GEOSisValid_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSisValidReason"]
    pub fn GEOSisValidReason_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSisValidDetail"]
    pub fn GEOSisValidDetail_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        flags: libc::c_int,
        reason: *mut *mut libc::c_char,
        location: *mut *mut GEOSGeometry,
    ) -> libc::c_char;
}
#[doc = " Original method, combines all rings into"]
#[doc = "a set of noded lines and then extracts valid"]
#[doc = "polygons from that linework."]
pub const GEOSMakeValidMethods_GEOS_MAKE_VALID_LINEWORK: GEOSMakeValidMethods = 0;
#[doc = " Structured method, first makes all rings valid"]
#[doc = "then merges shells and subtracts holes from"]
#[doc = "shells to generate valid result. Assumes that"]
#[doc = "holes and shells are correctly categorized."]
pub const GEOSMakeValidMethods_GEOS_MAKE_VALID_STRUCTURE: GEOSMakeValidMethods = 1;
#[doc = " Algorithm to use when repairing invalid geometries."]
#[doc = ""]
#[doc = " \\see GEOSMakeValidWithParams"]
pub type GEOSMakeValidMethods = libc::c_uint;
extern "C" {
    #[doc = " \\see GEOSMakeValidParams_create"]
    pub fn GEOSMakeValidParams_create_r(extHandle: GEOSContextHandle_t)
        -> *mut GEOSMakeValidParams;
}
extern "C" {
    #[doc = " \\see GEOSMakeValidParams_destroy"]
    pub fn GEOSMakeValidParams_destroy_r(
        handle: GEOSContextHandle_t,
        parms: *mut GEOSMakeValidParams,
    );
}
extern "C" {
    #[doc = " \\see GEOSMakeValidParams_setKeepCollapsed"]
    pub fn GEOSMakeValidParams_setKeepCollapsed_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSMakeValidParams,
        style: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSMakeValidParams_setMethod"]
    pub fn GEOSMakeValidParams_setMethod_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSMakeValidParams,
        method: GEOSMakeValidMethods,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSMakeValid"]
    pub fn GEOSMakeValid_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
